.provarCaches/00D5f000005vwGkEAI/objects/rstk__soapi__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_soapi</customHelpPage>
    <description>soapi__c Sales Order API object</description>
    <fields>
        <fullName>rstk__externalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>External ID, used internally.</inlineHelpText>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__soapi_ackaddr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When set, this will be the SO Acknowledgement Address. Address must be valid as a Acknowledgement Address for the given SO Customer. When blank, will use the Customer&apos;s default Ackknowledgement Address.</inlineHelpText>
        <label>Acknowledgement Address</label>
        <referenceTo>rstk__socaddr__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_addorupdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For an add operation, if the sales order specified already exists then add lines to this order instead of generating an error.</description>
        <inlineHelpText>For an add operation, if the sales order specified already exists then add lines to this order instead of generating an error.</inlineHelpText>
        <label>Update existing Sales Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_address1__c</fullName>
        <inlineHelpText>When overriding Ship-To Address, enter desired Street Number and Street Name here.</inlineHelpText>
        <label>Ship To Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_address2__c</fullName>
        <inlineHelpText>When overriding Ship-To Address, enter desired unit number, suite number or other designation here.</inlineHelpText>
        <label>Ship To Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_address3__c</fullName>
        <inlineHelpText>When overriding Ship-To Address, enter desired designation here.</inlineHelpText>
        <label>Ship To Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_addstaddrovr__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, creates a Ship-To Override Address using the SYDATA address info entered (see address fields below).  Use in API Modes = Add Header, Add Both, Change Header or Change Both.</inlineHelpText>
        <label>Add Ship To Address Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_addtobatch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked and transaction is to Create Invoice, the given invoice will be added to the current open Invoice Batch</inlineHelpText>
        <label>Add Sales Invoice to Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_altinvitem__c</fullName>
        <inlineHelpText>The Alternative inventory item to associate with a new sales order line. The field accepts the item number.</inlineHelpText>
        <label>Alternate Selectable Inventory Item</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_async__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, record will be processed &quot;in background&quot;, meaning that it will process when Periodic Batch Processor cycles. Note that if field is set &amp; does not process within a few minutes, it may be that Periodic Batch Processor needs to be restarted.</inlineHelpText>
        <label>Asynchronous Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_billtoaddr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When set, this will be the SO Bill To Address. Address must be valid as a Bill To Address for the given SO Customer. When blank, will use the Customer&apos;s default Bill To Address.</inlineHelpText>
        <label>Bill To Address</label>
        <referenceTo>rstk__socaddr__c</referenceTo>
        <relationshipLabel>Sales Order APIs (Bill To Address)</relationshipLabel>
        <relationshipName>soapis_billtoaddr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When API Mode is &quot;Change Header&quot;, when this is checked, the Sales Order will be cancelled.  Note that the &apos;Cancelled Reason&apos; field must also be set when this field is checked.</inlineHelpText>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_canreason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When cancelling a Sales Order, this field is required</inlineHelpText>
        <label>Cancelled Reason</label>
        <referenceTo>rstk__soreason__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When set, this value will be used for the SO Header Carrier.  If not set, the Carrier will be set from the RS Customer Master default.</inlineHelpText>
        <label>Carrier (Header)</label>
        <referenceTo>rstk__sycarrier__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_carrier_useonline__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked then the value in the SOAPI Carrier field will be used to populate the sales order line carrier field rather than the sales order header carrier field.</inlineHelpText>
        <label>Use Carrier on Sales Order Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When creating a Sales Order from a SF Case, this field is automatically set.  This field may also be set when inserting the SOAPI record directly, and must be a valid SF Case.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_city__c</fullName>
        <inlineHelpText>When overriding Ship-To Address, enter desired City here.</inlineHelpText>
        <label>Ship To City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_clearcase__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When using API Mode = Change Line, when this is checked, the Case field on the specified SO Line will be cleared.</inlineHelpText>
        <label>Clear Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_clearopportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If set then the Opportunity field in the sales order header and/or sales order line will be cleared.</inlineHelpText>
        <label>Clear Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_clearsowarr__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When using API Mode = Change Line, if this field is checked, the Covered Item field on the SO Line will be cleared.</inlineHelpText>
        <label>Clear Covered Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_closeorder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked and API Mode = Change Header, the Sales Order specified will be closed.  Note that all lines must be shipped or canceled in order to close a Sales Order.</inlineHelpText>
        <label>Close Sales Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_conmethod__c</fullName>
        <inlineHelpText>When overriding Ship-To Address, enter Contact Method for the override Contact.  Options are

Email
Phone
Fax
Text to Email
Test to Phone</inlineHelpText>
        <label>Ship To Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Text to Email</fullName>
                </value>
                <value>
                    <fullName>Text to Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__soapi_contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When adding a SO to be associated with a Contract, this field must be set with an active valid Contract for the given Customer. Note that when used, other Contract-based rules apply, such as forcing products and/or pricing to match Contract parameters.</inlineHelpText>
        <label>Sales Contract</label>
        <referenceTo>rstk__socontract__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_cosacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>When set, this is the Cost of Sales Account used on the resulting SO Line.  If not set, the normal default logic is used.</inlineHelpText>
        <label>COS Acct</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_country__c</fullName>
        <inlineHelpText>When overriding Ship-To Address, enter desired Country here.</inlineHelpText>
        <label>Ship To Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_customer__c</fullName>
        <inlineHelpText>Can use this field to specify the Customer Number as an alternative to setting the Customer (Lookup) field to identify the Sales Order Customer.</inlineHelpText>
        <label>Customer Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_custpo__c</fullName>
        <inlineHelpText>When set, this is written to the Customer PO field on the SO Header being added or changed</inlineHelpText>
        <label>Customer PO</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_custref__c</fullName>
        <inlineHelpText>When set, this is written to the Customer Reference field on the SO Header being added or changed</inlineHelpText>
        <label>Customer Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_delalllines__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When using API Mode = Delete Line, when this is checked, all lines for the given SO will be deleted</inlineHelpText>
        <label>Delete All Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_delstaddrovr__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, deletes a previously created Ship-To Override Address. Use in API Modes = Change Header or Change Both.</inlineHelpText>
        <label>Delete Ship To Address Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_discpct__c</fullName>
        <inlineHelpText>When set, this is used as the SO Line Discount and overrides any pre-defined default that would otherwise be used</inlineHelpText>
        <label>Discount Pct.</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_duedate__c</fullName>
        <inlineHelpText>When set, this will be used as the SO Line Due Date and overrides the normal calculated value</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_email__c</fullName>
        <inlineHelpText>When overriding Ship-To Address, enter appropriate email address for the override Contact.</inlineHelpText>
        <label>Ship To Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_equipsale__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the resulting SO Header will have the &apos;Contract Equipment Sale&apos; checked.</inlineHelpText>
        <label>Contract Equipment Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_error__c</fullName>
        <inlineHelpText>When some validation rule or data issue does not allow this record to be successfully processed, the appropriate error message is written here</inlineHelpText>
        <label>Error Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_expdate__c</fullName>
        <inlineHelpText>If record is for a RS Quote, this is the date that said quote expires</inlineHelpText>
        <label>Quote Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_extcomment__c</fullName>
        <inlineHelpText>User-defined header-level (applies to entire Sales Order) comments to print on SO Acknowledgement (and other documents) that are intended to be read by the Sales Order Customer.</inlineHelpText>
        <label>External Comments (Header)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_extcommentline__c</fullName>
        <inlineHelpText>User-defined line-level comments to print on SO Acknowledgement (and other documents) that are intended to be read by the Sales Order Customer.</inlineHelpText>
        <label>External Comments (Line)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_exterror__c</fullName>
        <inlineHelpText>System-generated extended error message, set as applicable.</inlineHelpText>
        <label>Extended Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_fax__c</fullName>
        <inlineHelpText>When overriding Ship-To Address, enter appropriate fax number for the override Contact.</inlineHelpText>
        <label>Ship To Fax</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_firm__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When adding a SO Line for a Product and the default for said Product is to add at a Unfirm status, by checking this checkbox, it will override said logic and add the SO Line at a Firm status.</inlineHelpText>
        <label>Firm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_fob__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FOB Code</description>
        <inlineHelpText>When set, this overrides the normal default logic for setting the Header FOB</inlineHelpText>
        <label>FOB (Header)</label>
        <referenceTo>rstk__syfob__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_freightamt__c</fullName>
        <inlineHelpText>If set, this is used to set the SO Line Freight Amount</inlineHelpText>
        <label>Freight Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_fterms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Freight Term Code</description>
        <inlineHelpText>If set, this overrides the normal default logic for setting Header Freight Terms</inlineHelpText>
        <label>Freight Terms (Header)</label>
        <referenceTo>rstk__syfrghtrm__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_fulfill__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>On the add of a SO Line, this can be set so that upon the save of this record, a SYDATA record is automatically created to execute the fulfillment of said SO Line.</inlineHelpText>
        <label>Fulfill Order Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_fulfillall__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Sales Orders created from SOAPI asynchronously via the SYDATA Process Bulk SOAPIs transaction, this field causes a single Fulfillment SYDATA to be spawned after the order creation (vs. individual fulfillments done via SOAPI_FULFILL)</inlineHelpText>
        <label>Fulfill All Order Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_gateway1__c</fullName>
        <inlineHelpText>This field carries the additional/alternate Order Payment Gateway #1</inlineHelpText>
        <label>Payment Gateway 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_gateway2__c</fullName>
        <inlineHelpText>This field carries the additional/alternate Order Payment Gateway #2</inlineHelpText>
        <label>Payment Gateway 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_gateway3__c</fullName>
        <inlineHelpText>This field carries the additional/alternate Order Payment Gateway #3</inlineHelpText>
        <label>Payment Gateway 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_handlingamt__c</fullName>
        <inlineHelpText>If set, this is used to set the SO Line Handling Amount</inlineHelpText>
        <label>Handling Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_hdfreighatamt__c</fullName>
        <inlineHelpText>When using API Mode = Add Header or Change Header, enter value for the Freight Amount total for the entire SO, overriding any summation from SO Lines.</inlineHelpText>
        <label>Header Freight Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_hdhandlingamt__c</fullName>
        <inlineHelpText>When using API Mode = Add Header or Change Header, enter value for the Handling Amount total for the entire SO, overriding any summation from SO Lines.</inlineHelpText>
        <label>Header Handling Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_hdiscpct__c</fullName>
        <inlineHelpText>When set, this value is used as the Sales Order discount that applies to the entire Sale Order total</inlineHelpText>
        <label>Header Discount Pct.</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_hdpackageamt__c</fullName>
        <inlineHelpText>When using API Mode = Add Header or Change Header, enter value for the Packaging Amount total for the entire SO, overriding any summation from SO Lines.</inlineHelpText>
        <label>Header Packaging Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_instaddr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When set, this will be the SO Installation Address. Address must be valid as a Installation Address for the given SO Installation Customer. When blank, will use the Installation Customer&apos;s default Installation Address.</inlineHelpText>
        <label>Installation Address</label>
        <referenceTo>rstk__socaddr__c</referenceTo>
        <relationshipLabel>Sales Order APIs (Installation Address)</relationshipLabel>
        <relationshipName>soapis_instaddr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_installcust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When set, this is used as the SO Installation Customer.  Note that value needs to be a valid Related Customer for the given SO Customer.  If not set, the SO Customer is used as the Installation Customer.</inlineHelpText>
        <label>Installation Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Sales Order APIs (Installation Customer)</relationshipLabel>
        <relationshipName>soapis3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_intcomment__c</fullName>
        <inlineHelpText>User-defined SO Header Internal Comments (which do not print on SO Acknowledgement).</inlineHelpText>
        <label>Internal Comments (Header)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_intcommentline__c</fullName>
        <inlineHelpText>User-defined SO Line Internal Comments (which do not print on SO Acknowledgement).</inlineHelpText>
        <label>Internal Comments (Line)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_intersystem__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this record was spawned from a Inter-System (between Companies) Purchase Order.</inlineHelpText>
        <label>Inter-System Direct Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_intracompany__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this record was spawned from a Intra-Company (between Divisions) Purchase Order.</inlineHelpText>
        <label>Intra-Company Direct Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_invdiv__c</fullName>
        <inlineHelpText>When set, will be used as the Inventory Division for the SO Line being added</inlineHelpText>
        <label>Inventory Division</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When adding a SO Line and checking the Fulfill Order Line field (which spawns a corresponding SYDATA), when this field is checked, a SYDATA will be spawned upon the order fulfillment that will in turn create the Sales Invoice for that fulfillment.</inlineHelpText>
        <label>Create Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_invoiceorder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When setting the &apos;Create Invoice&apos; field to checked and all shipped SO Lines are to be invoiced for the stated SO, check this checkbox.  When the SYDATA is spawned to create the invoice, this setting will be carried over the that SYDATA record.</inlineHelpText>
        <label>Invoice all Shippers for this Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_isocountry__c</fullName>
        <description>soapi_isocountry__c</description>
        <inlineHelpText>International Organization for Standardization (ISO) assigned Country Code applicable for the override Ship-To Address.</inlineHelpText>
        <label>ISO Country Codes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rstk__ISO_Country_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__soapi_isquote__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked when adding an order, the order will be added as a RS Quote</inlineHelpText>
        <label>Rootstock Quote Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_issydata__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used internally, don&apos;t set manually. Marks that the soapi object is being processed as part of a bulk operation.</inlineHelpText>
        <label>SYDATA Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_isysdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When set, will be used as the Inventory Division for the SO Line being added.  This is the lookup field so needs to be valid Division (and an existing Inventory Div for the SO Line Product).</inlineHelpText>
        <label>Inventory Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Sales Order APIs (Inventory Division)</relationshipLabel>
        <relationshipName>invsoapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_line__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The Sales Order Line Number.  If adding a line, this can be set to the line number desired, otherwise the system will set it.  When doing a Change or Delete for a SO Line, this identifies the SO Line affected.</inlineHelpText>
        <label>Line Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_linecancel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked and API Mode is Change Line, the specified Sales Order Line will be canceled.</inlineHelpText>
        <label>Cancel Sales Order Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_lineinstaddr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When set, value is used to set the Installation Address on the specified SO Line.  If not set, the standard default logic is used for setting the value on the SO Line.</inlineHelpText>
        <label>Line Installation Address</label>
        <referenceTo>rstk__socaddr__c</referenceTo>
        <relationshipLabel>Sales Order APIs (Line Installation Address)</relationshipLabel>
        <relationshipName>soapis_lineinstaddr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_lineshiptoaddr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When set, value is used to set the Ship To Address on the specified SO Line.  If not set, the standard default logic is used for setting the value on the SO Line.</inlineHelpText>
        <label>Line Ship To Address</label>
        <referenceTo>rstk__socaddr__c</referenceTo>
        <relationshipLabel>Sales Order APIs (Line Ship To Address)</relationshipLabel>
        <relationshipName>soapis_lineshiptoaddr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_lotno10__c</fullName>
        <inlineHelpText>This field holds (one of up to twelve) Lot Numbers to be used when the associated Sales Order Line is fulfilled (paired with the corresponding Ordered Lot Quantity field).</inlineHelpText>
        <label>Ordered Lot Number 10</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_lotno11__c</fullName>
        <inlineHelpText>This field holds (one of up to twelve) Lot Numbers to be used when the associated Sales Order Line is fulfilled (paired with the corresponding Ordered Lot Quantity field).</inlineHelpText>
        <label>Ordered Lot Number 11</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_lotno12__c</fullName>
        <inlineHelpText>This field holds (one of up to twelve) Lot Numbers to be used when the associated Sales Order Line is fulfilled (paired with the corresponding Ordered Lot Quantity field).</inlineHelpText>
        <label>Ordered Lot Number 12</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_lotqty10__c</fullName>
        <inlineHelpText>This field holds the quantity associated with (one of up to twelve) Lot Numbers to be used when the associated Sales Order Line is fulfilled.  Note that the Ordered Lot Quantity is in the Inventory UOM.</inlineHelpText>
        <label>Ordered Lot Quantity 10</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_lotqty11__c</fullName>
        <inlineHelpText>This field holds the quantity associated with (one of up to twelve) Lot Numbers to be used when the associated Sales Order Line is fulfilled.  Note that the Ordered Lot Quantity is in the Inventory UOM.</inlineHelpText>
        <label>Ordered Lot Quantity 11</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_lotqty12__c</fullName>
        <inlineHelpText>This field holds the quantity associated with (one of up to twelve) Lot Numbers to be used when the associated Sales Order Line is fulfilled.  Note that the Ordered Lot Quantity is in the Inventory UOM.</inlineHelpText>
        <label>Ordered Lot Quantity 12</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_mode__c</fullName>
        <inlineHelpText>Mode/function for this transaction.  Options are

Add Header
Add Line
Add Both
Change Header
Change Line
Change Both
Delete Header
Delete Line
Delete Both</inlineHelpText>
        <label>API Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add Header</fullName>
                </value>
                <value>
                    <fullName>Add Both</fullName>
                </value>
                <value>
                    <fullName>Add Line</fullName>
                </value>
                <value>
                    <fullName>Change Header</fullName>
                </value>
                <value>
                    <fullName>Change Both</fullName>
                </value>
                <value>
                    <fullName>Change Line</fullName>
                </value>
                <value>
                    <fullName>Delete Line</fullName>
                </value>
                <value>
                    <fullName>Delete Both</fullName>
                </value>
                <value>
                    <fullName>Delete Header</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__soapi_no_nodirectpo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field allows for the Sales Order Line to be added or updated with the Suppress Creation Direct Purchase Orders indicator set to FALSE</inlineHelpText>
        <label>Clear Suppress Creation Direct PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_nodirectpo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field allows for the Sales Order Line to be added or updated with the Suppress Creation Direct Purchase Orders indicator set to TRUE</inlineHelpText>
        <label>Set Suppress Creation Direct PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_nottaxexempt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the given Product or Customer is tax exempt but it is desired that this Sales Order Line is to be taxed, set this field to checked.</inlineHelpText>
        <label>Not Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_opportunity__c</fullName>
        <inlineHelpText>The Id of an opportunity, if not blank then the value will assigned to the sales order header and/or the sales order line depending on the mode.</inlineHelpText>
        <label>Opportunity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_orderdate__c</fullName>
        <inlineHelpText>When adding a SO and the Order Date is to be something other than TODAY, set the desired date here.</inlineHelpText>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_orderno__c</fullName>
        <inlineHelpText>When adding a SO and auto-numbering of said order is not desired, set this field to desired value. Note that when using user-defined order #s, the # must start with an alpha character.

If doing a change or delete, field can be used to reference the SO#</inlineHelpText>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>